[gd_scene load_steps=9 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/cerita/scene3/Scene_3.png" type="Texture" id=2]
[ext_resource path="res://cerita/scene3/Scene3.gd" type="Script" id=3]
[ext_resource path="res://asset/cerita/scene3/Narasi_Scene3.wav" type="AudioStream" id=4]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=5]
[ext_resource path="res://cerita/dialog.tres" type="DynamicFont" id=6]
[ext_resource path="res://asset/cerita/scene3/01Berhalo_Scene3.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/cerita/scene3/02Pingai_Scene3.wav" type="AudioStream" id=8]

[node name="Scene3" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 2 )

[node name="Label2" type="Label" parent="Control" index="1"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 688.0
margin_top = 96.0
margin_right = 1010.0
margin_bottom = 221.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.988235, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "\"Sekarang engkau yang
memimpin Kerajaan Melayu Jambi,
jagalah negeri ini dengan Baik\"
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control" index="2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 448.0
margin_top = 392.0
margin_right = 699.0
margin_bottom = 503.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.164706, 0.466667, 0.686275, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.972549, 0.972549, 1 )
text = "\"Baik.. Perintah ayahanda, 
ananda laksanakan\"
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="Control" index="3"]
margin_left = 96.0
margin_top = 16.0
margin_right = 672.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ketika anak-anaknya beranjak dewasa, 
Tahta Kerajaan diturunkan ke anak tertua yaitu
Orang Kayo Pingai."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 4 )

[node name="dialog" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 7 )

[node name="dialog2" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 0.5
one_shot = true

[node name="Tween" type="Tween" parent="." index="5"]
[connection signal="pressed" from="Control/Panel2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Panel2/mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="Control/controlCerita/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Control/controlCerita/next" to="." method="_on_next_pressed"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
[connection signal="finished" from="dialog" to="." method="_on_dialog_finished"]
[connection signal="finished" from="dialog2" to="." method="_on_dialog2_finished"]
